--- a/Day1_Pandas_Basics.ipynb
+++ b/Day1_Pandas_Basics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPiMbnKNysoXg5d6gIYAPQz",
+      "authorship_tag": "ABX9TyNUpDSg4RfZKOrBzTv1Q0Bw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2475,6 +2475,137 @@
           "execution_count": 20
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Day 1 – Pandas Basics (Explanation & Learning)\n",
+        "\n",
+        "## What is Pandas?\n",
+        "Pandas is a Python library used to work with structured data.\n",
+        "It helps us create tables (DataFrames) similar to Excel sheets and perform data analysis.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Importing Pandas\n",
+        "`import pandas as pd`\n",
+        "\n",
+        "- This line imports the pandas library\n",
+        "- `pd` is a short name used for convenience\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Creating Data using Dictionary\n",
+        "We created a Python dictionary where:\n",
+        "- Keys are column names\n",
+        "- Values are lists of data for each column\n",
+        "\n",
+        "Example:\n",
+        "- Name → student names\n",
+        "- Age → student ages\n",
+        "- Marks → student marks\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Creating a DataFrame\n",
+        "`df = pd.DataFrame(data)`\n",
+        "\n",
+        "- Converts the dictionary into a DataFrame\n",
+        "- A DataFrame is a 2D table with rows and columns\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Viewing the Data\n",
+        "`df`\n",
+        "\n",
+        "- Displays the complete table in the notebook\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## df.head()\n",
+        "`df.head()`\n",
+        "\n",
+        "- Shows the first 5 rows of the dataset\n",
+        "- Used to quickly check if data loaded correctly\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## df.describe()\n",
+        "`df.describe()`\n",
+        "\n",
+        "- Gives statistical summary of numerical columns\n",
+        "- Includes:\n",
+        "  - count\n",
+        "  - mean (average)\n",
+        "  - min and max values\n",
+        "  - percentile values (25%, 50%, 75%)\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## df.info()\n",
+        "`df.info()`\n",
+        "\n",
+        "- Shows:\n",
+        "  - Number of rows and columns\n",
+        "  - Column names\n",
+        "  - Data types (int, float, object)\n",
+        "  - Whether there are missing values or not\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Creating a New Column (Passed)\n",
+        "`df[\"Passed\"] = df[\"Marks\"] >= 80`\n",
+        "\n",
+        "- Creates a new column named \"Passed\"\n",
+        "- If Marks ≥ 80 → True\n",
+        "- Else → False\n",
+        "- This is an example of applying conditions on data\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Filtering Data\n",
+        "`df[df[\"Passed\"] == True]`\n",
+        "\n",
+        "- Shows only those rows where students have passed\n",
+        "- Used to filter data based on conditions\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Mean of Marks\n",
+        "`df[\"Marks\"].mean()`\n",
+        "\n",
+        "- Calculates the average marks of all students\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Sorting Data\n",
+        "`df.sort_values(by=\"Marks\", ascending=False)`\n",
+        "\n",
+        "- Sorts the data based on Marks\n",
+        "- Highest marks appear first\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Grade Column Logic\n",
+        "We created a Grade column using conditions:\n",
+        "- Marks ≥ 90 → Grade A\n",
+        "- Marks ≥ 80 → Grade B\n",
+        "- Else → Grade C\n",
+        "\n",
+        "This was done using a function and applying it to the Marks column.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Key Learning from Day 1\n",
+        "- How to create and view a DataFrame\n",
+        "- How to analyze data using Pandas\n",
+        "- How to add new columns using conditions\n",
+        "- How to filter and sort data\n",
+        "- This type of data processing is used in almost every Machine Learning project\n"
+      ],
+      "metadata": {
+        "id": "uURiHmVqlpPL"
+      }
     }
   ]
 }
