--- a/Day4_Logistic_regressionPass_fail.ipynb
+++ b/Day4_Logistic_regressionPass_fail.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO3NI7lKNRDswwtSOxZ4ocY",
+      "authorship_tag": "ABX9TyP9fd+Xi5qGDw2zHEWZx1jU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1065,7 +1065,7 @@
         "# Day 4 – Logistic Regression (Classification)\n",
         "\n",
         "## Problem\n",
-        "Predict whether a student will pass or fail based on hours studied.\n",
+        "Predict whether a student will pass or fail based on marks.\n",
         "\n",
         "## Model\n",
         "Logistic Regression (Classification model)\n",
