--- a/Day3_Linear_Regression.ipynb
+++ b/Day3_Linear_Regression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNW7pXvplrbqQ1A5AC+dueU",
+      "authorship_tag": "ABX9TyN60ntcffUByUDofk/RR/nA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "uqbWIk9bDKwE"
       },
@@ -60,7 +60,7 @@
         "id": "VKyMmWyaIN1w",
         "outputId": "4dc2d835-96a0-40f3-c28d-283eae6fdb17"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -430,7 +430,7 @@
       "metadata": {
         "id": "-M9mnkv0JJfi"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -443,7 +443,7 @@
       "metadata": {
         "id": "rkJjA-y4MOXb"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -460,7 +460,7 @@
         "id": "0svIsnNYM_lJ",
         "outputId": "d4aeff58-98a3-49c2-aca1-f48b376e60c4"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -904,7 +904,7 @@
         "id": "aWEACnb1OSRz",
         "outputId": "84003a62-9cb2-45f0-ae6a-66f0b44ad102"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -931,7 +931,7 @@
         "id": "3kkIMHyIxv9R",
         "outputId": "2929a987-3019-4b12-caa4-f9ede2649d26"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -953,7 +953,7 @@
       "metadata": {
         "id": "fh4i0OPjyh4_"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -968,7 +968,7 @@
         "id": "yi_0zWo5y7BY",
         "outputId": "14bb4964-44dc-4b00-ab15-6b468dff2e20"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -995,7 +995,7 @@
         "id": "4ykOHEngzMf3",
         "outputId": "2f07615e-f0ca-4b8b-c151-4480cbdd61eb"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1042,6 +1042,26 @@
       ],
       "metadata": {
         "id": "XyA0vUU9z5Qo"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "🎯 Use cases\n",
+        "\n",
+        "Marks prediction\n",
+        "\n",
+        "Salary prediction\n",
+        "\n",
+        "Sales forecasting\n",
+        "\n",
+        "Temperature prediction\n",
+        "\n",
+        "House price prediction\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "LhpKzpTEL7ht"
       }
     }
   ]
